<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity"
    android:gravity="bottom|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/localization_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_localization" />

    <Button
        android:id="@+id/localization_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location" />

    <TextView
        android:id="@+id/address_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_address"/>

    <Button
        android:id="@+id/address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_address"/>

</LinearLayout>