<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_sensor"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/icon_description"
        android:src="@drawable/sensor_icon"/>

    <TextView
        android:id="@+id/sensor_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sensor_type"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/sensor_name_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/sensor_type"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/icon"
        android:ellipsize="marquee"
        android:text="@string/sensor_type_text"
        android:textSize="12sp"
        android:singleLine="true"/>

</RelativeLayout>